--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arsip PDAM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -14,6 +15,13 @@
         </div>
         <div class="right">
             <button class="setting">🤖SETTING</button>
+        </div>
+    </div>
+    <div class="konten">
+        <h1>ARSIP PDAM BALANGAN</h1>
+        <div class="search">
+            <input type="text" id="Cari" placeholder="cari dokumen">
+            <button>🔍</button>
         </div>
     </div>
 </body>
